--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,20 @@
 {
 	"$schema": "http://json.schemastore.org/eslintrc",
+
 	"env": {
 		"browser": true,
 		"es2021": true
 	},
-	"extends": ["eslint:recommended","prettier"],
+	"extends": ["eslint:recommended","recommended/esnext"],
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
     "plugins": ["prettier"],
 	"rules": {
-        "prettier/prettier":"warn"
+        "prettier/prettier":"warn",
+		"no-unused-vars":"error"
     }
+	
     
 }
